Фикс бага с не правильным удалением

--- a/static/index.html
+++ b/static/index.html
@@ -72,7 +72,7 @@
                           <input type='text' v-model='field.sctript' size='30' >
                           </td>
                           <td>
-                          <button type="button" class="btn btn-light" v-on:click='del_row(index)'>
+                          <button type="button" class="btn btn-light" v-on:click='del_row(key)'>
                           <i class="far fa-times-circle"></i>
                           </button>
                           </td>
