--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="static/style.css">
 
 </head>
-<div id="app">
+<main id="app">
   <header>
     <div class="navbar navbar-default">
       <div class="navbar-header">
@@ -15,102 +15,109 @@
       </div>
     </div>
   </header>
-  <div class="container m-1">
-      <div class="row">
-          <section class="col">
-              <header>
-              </header>
-              <div class="card">
-              <div class="card-header bg-light m-1">
-                  Для генерации тестовых данных заполните форму:
-              </div>
-              <div class="card-body mt-0"> 
-              <form>
+    <section class="row">
+     <div class='col-8'>
+      <article class="card">
+         <div class="card-header bg-light m-1">
+          Для генерации тестовых данных заполните форму:
+          </div>
+
+          <div class="card-body mt-0"> 
+            <form>
               <div class = "row">
-              <div class ="col">
-                  <select v-model="main_form.null_method" class="form-control">
-                       <option v-bind:value="'percent_optimized'">Заполнять нулами указанный % полей (покрывая все возможные комбинации)</option>
-                       <option v-bind:value="'combination_optimized'">Покрыть Is Null поля максимальным множеством комбинаций (быстрее)</option>
-                  </select>
-              </div>
+                  <div class ="col">
+                      <select v-model="main_form.null_method" class="form-control">
+                         <option v-bind:value="'percent_optimized'">Заполнять нулами указанный % полей (покрывая все возможные комбинации)</option>
+                         <option v-bind:value="'combination_optimized'">Покрыть Is Null поля максимальным множеством комбинаций (быстрее)</option>
+                      </select>
+                  </div>
               </div>
 
               <div class = "row">
-             <table class="table mt-1">
-                 <thead>
-                     <tr>
-                         <th scope="col">Field Name</th>
-                         <th scope="col">Field Type</th>
-                         <th scope="col">
-                         <span v-show="main_form.null_method=='percent_optimized'">% of Nulls</span>
-                         <span v-show="main_form.null_method=='combination_optimized'">Is Null</span>
-                         </th>
+                 <table class="table mt-1">
+                     <thead>
+                         <tr>
+                             <th scope="col">Field Name</th>
+                             <th scope="col">Field Type</th>
+                             <th scope="col">
+                                 <span v-show="main_form.null_method=='percent_optimized'">% of Nulls</span>
+                                 <span v-show="main_form.null_method=='combination_optimized'">Is Null</span>
+                             </th>
                          <th scope="col">Custom Script</th>
-                    </tr>
+                         </tr>
                   </thead>
+
                  <tbody class="table-striped">
                      <tr v-for ="(field, key) in main_form.fields" >
                           <td>
-                          <input type='text' v-model=field.id size='15'>
+                              <input type='text' v-model=field.id size='15'>
                           </td>
+                          
                           <td>
-                          <div class="input-group">
-                              <input type="text" class="form-control" editable='false' 
-                              class='btn btn-light' readonly='on' v-model='field.type' size ='10'>
-                              <div class="input-group-prepend">
-                                  <div class="input-group-text"  @click="modal_event(field)">
-                                  <i class="far fa-folder-open"></i>
+                              <div class="input-group">
+                                  <input type="text" class="form-control" editable='false' 
+                                  class='btn btn-light' readonly='on' v-model='field.type' size ='10'>
+                                  <div class="input-group-prepend">
+                                      <div class="input-group-text"  @click="modal_event(field)">
+                                          <i class="far fa-folder-open"></i>
+                                      </div>
                                   </div>
                               </div>
-                          </div>
                           </td>
+
                           <td>
-                          <input v-show="main_form.null_method=='percent_optimized'"
-                                     type='number' v-model='field.percent_nulls' class="percent-input">
-                          <input v-show="main_form.null_method=='combination_optimized'"
-                                     true-value=true false-value= false
-                                     type='checkbox' v-model='field.null'>
+                              <input v-show="main_form.null_method=='percent_optimized'"
+                              type='number' v-model='field.percent_nulls' class="percent-input">
+                              <input v-show="main_form.null_method=='combination_optimized'"
+                              true-value=true false-value= false type='checkbox' v-model='field.null'>
                           </td>
+
                           <td>
-                          <input type='text' v-model='field.sctript' size='35' >
+                               <input type='text' v-model='field.sctript' size='35' >
                           </td>
+
                           <td>
-                          <button type="button" class="btn btn-light" v-on:click='del_row(key)'>
-                          <i class="far fa-times-circle"></i>
-                          </button>
+                               <button type="button" class="btn btn-light" v-on:click='del_row(key)'>
+                                  <i class="far fa-times-circle"></i>
+                               </button>
                           </td>
                     </tr>
                  </tbody>
-              </table>
+                </table>              
               </div>
+
               <div class="row">
-              <div class="col">
-              <button type="button" class="btn btn-outline-info" v-on:click="add_row">
-              New Line <i class="fas fa-plus"></i>
-              </button>
+                  <div class="col">
+                      <button type="button" class="btn btn-outline-info" v-on:click="add_row">
+                         New Line <i class="fas fa-plus"></i>
+                      </button>
+                  </div>
               </div>
-              </div>
+
               <div class="row mt-4 ml-1">
-                     <label for="language" class="col-form-label" >#Language :</label>
-                     <div class='col'>
-                  <select v-model="main_form.language" class="form-control form-control-sm" id='language'>
-                       <option v-bind:value="'en'">English</option>
-                       <option v-bind:value="'ru'">Russian</option>
-                  </select>
-                     </div>
-                     <label for="inputdatalen" class='col-form-label' >Rows :</label>
-                     <div class='col'>
-                         <input type="text" class="form-control form-control-sm count-input" id="inputdatalen" v-model='main_form.data_len'>
-                     </div>
+                  <label for="language" class="col-form-label" >#Language :</label>
+                  
+                  <div class='col'>
+                      <select v-model="main_form.language" class="form-control form-control-sm" id='language'>
+                          <option v-bind:value="'en'">English</option>
+                          <option v-bind:value="'ru'">Russian</option>
+                      </select>
+                  </div>
+                  <label for="inputdatalen" class='col-form-label' >Rows :</label>
+                  <div class='col'>
+                       <input type="text" class="form-control form-control-sm count-input" id="inputdatalen" v-model='main_form.data_len'>
+                  </div>
               </div>
+
                <div class="row mt-4 ml-1">
                      <label for="formatselect" >#Output Format:</label>
                      <div class='col'>
-                  <select v-model="file_type" class="form-control form-control-sm" id ="formatselect">
-                       <option v-bind:value="'text'">Text</option>
-                       <option v-bind:value="'sql'">SQL</option>
-                  </select>
+                         <select v-model="file_type" class="form-control form-control-sm" id ="formatselect">
+                             <option v-bind:value="'text'">Text</option>
+                             <option v-bind:value="'sql'">SQL</option>
+                        </select>
                      </div>
+
                      <label for="delimiterinput" >Delimiter :</label>
                      <div class='col'>
                          <input type="text"  id="delimiterinput" v-model='delimiter' class='form-control'>
@@ -121,17 +128,19 @@
                      </div>
               </div>
               <button type="button" class="btn btn-primary btn-lg btn-block ml-1 mt-4">Process Data</button>
-            </div> 
-              </form>
-           </div>
-           </div>
-          </section>
-          <aside class="col-sm-3"> 
-               d
-          </aside>
-      </div>
-  </div>
+            </form>
+        </article> 
+        </div>
+        <div class='col-4'>
+        <div class="alert alert-success" role="alert">
+  <h4 class="alert-heading">Генератор тестовых данных</h4>
+     <p>Описание тестовых данных задается в основной форме.</p>
+  <hr>
+  <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
 </div>
+        </div>
+    </section>
+</main>
 
 <script type="text/x-template" id="modal-template">
   <transition name="modal">
