--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.3.0 (alpha)
+        v. 0.4.1 (alpha)
     </span>
     </div>
   </header>
@@ -153,6 +153,7 @@
              <ul>
                 <li>08.09.2019 - v. 0.3.0 Добавлена локализация Украина, добавлен тип данных - константа, фикс формата даты</li>
                 <li>23.09.2019 - v. 0.4.0 Фикс багов с методами нулов, добавлены функции upper/lower, окно редактора скриптов</li>
+                <li>24.09.2019 - v. 0.4.1 Фмксы интерфейса, новые типы - isbn, imei, choie</li>
              </ul>
         </div>
         </div>
