--- a/static/index.html
+++ b/static/index.html
@@ -153,7 +153,7 @@
              <ul>
                 <li>08.09.2019 - v. 0.3.0 Добавлена локализация Украина, добавлен тип данных - константа, фикс формата даты</li>
                 <li>23.09.2019 - v. 0.4.0 Фикс багов с методами нулов, добавлены функции upper/lower, окно редактора скриптов</li>
-                <li>24.09.2019 - v. 0.4.1 Фмксы интерфейса, новые типы - isbn, imei, choie</li>
+                <li>24.09.2019 - v. 0.4.1 Фмксы интерфейса, новые типы - isbn, imei, choice</li>
              </ul>
         </div>
         </div>
