--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.4.1 (alpha)
+        v. 0.4.2 (alpha)
     </span>
     </div>
   </header>
@@ -151,9 +151,9 @@
         <div class="alert alert-light border-top m-2" role="alert">
              <h4 class="alert-heading">What's new</h4>
              <ul>
-                <li>08.09.2019 - v. 0.3.0 Добавлена локализация Украина, добавлен тип данных - константа, фикс формата даты</li>
                 <li>23.09.2019 - v. 0.4.0 Фикс багов с методами нулов, добавлены функции upper/lower, окно редактора скриптов</li>
-                <li>24.09.2019 - v. 0.4.1 Фмксы интерфейса, новые типы - isbn, imei, choice</li>
+                <li>24.09.2019 - v. 0.4.1 Фиксы интерфейса, новые типы - isbn, imei, choice</li>
+                <li>25.09.2019 - v. 0.4.2 Фиксы интерфейса, новые типы - boolean, phone model, os name</li>
              </ul>
         </div>
         </div>
