--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       Largeset - Fake data generator
        </span>
        <span class="navbar-text">
-        v. 0.4.2 (alpha)
+        v. 0.4.3 (alpha)
     </span>
     </div>
   </header>
@@ -160,9 +160,10 @@
         <div class="alert alert-light border-top m-2" role="alert">
              <h4 class="alert-heading">What's new</h4>
              <ul>
-                <li>23.09.2019 - v. 0.4.0 Фикс багов с методами нулов, добавлены функции upper/lower, окно редактора скриптов</li>
                 <li>24.09.2019 - v. 0.4.1 Фиксы интерфейса, новые типы - isbn, imei, choice</li>
                 <li>25.09.2019 - v. 0.4.2 Фиксы интерфейса, новые типы - boolean, phone model, os name</li>
+                <li>26.09.2019 - v. 0.4.3 Красивые чекбоксы, суфиксы и префиксы строковых переменных</li>
+
              </ul>
         </div>
         </div>
@@ -226,6 +227,8 @@
              <ul>
                <li>В верхний регистр - <code>upper(x)</code></li>
                <li>В нижний регистр - <code>lower(x)</code></li>
+               <li>Суффиксы - Указать + в начале строки Пример - <code>+-my_suffix</code> </li>
+               <li>Префиксы - Указать + в конце строки Пример - <code>my_preffix-+</code></li>
           </li>
 
      </div>
